php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32046 Wrong format string in zend_compile.c
Submitted: 2005-02-21 14:40 UTC Modified: 2005-03-06 17:22 UTC
From: mcihar at suse dot cz Assigned:
Status: Closed Package: Compile Warning
PHP Version: 5.0.3 OS: Linux, 64-bit
Private report: No CVE-ID: None
 [2005-02-21 14:40 UTC] mcihar at suse dot cz
Description:
------------
php-5.0.3/Zend/zend_compile.c: In function `build_runtime_defined_function_key':
php-5.0.3/Zend/zend_compile.c:71: warning: cast from pointer to integer of different size

Fix:

--- Zend/zend_compile.c.orig    2004-12-06 12:52:59.000000000 +0100
+++ Zend/zend_compile.c 2005-02-21 13:07:16.640804919 +0100
@@ -68,7 +68,7 @@
    uint char_pos_len;
    char *filename;

-   char_pos_len = zend_sprintf(char_pos_buf, "%x", (unsigned int) LANG_SCNG(_yy_last_accepting_cpos));
+   char_pos_len = zend_sprintf(char_pos_buf, "%p", LANG_SCNG(_yy_last_accepting_cpos));
    if (CG(active_op_array)->filename) {
        filename = CG(active_op_array)->filename;
    } else {



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-03-06 17:22 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Aug 18 19:00:01 2026 UTC