Fixed compile warning (bug #32046)